--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@reduxjs/toolkit": "latest",
+    "@reduxjs/toolkit": "^2.9.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,17 +46,18 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.4.1",
+    "next": "^15.5.4",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.1",
-    "react-redux": "latest",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.4",
     "redux": "latest",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
