--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "next": "^15.5.4",
     "next-themes": "^0.4.4",
@@ -58,7 +59,7 @@
     "recharts": "^2.15.4",
     "redux": "latest",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
